--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 
     <div id="top-container">
-        <img src="CSS - My Site Images/cloud.png" alt="Cloud Image" id="cloud1">
+        <img src="cloud.png" alt="Cloud Image" id="cloud1">
         <h1>I'm Amyra.</h1>
     <p>An alien</p>
-    <img src="CSS - My Site Images/cloud.png" alt="Cloud Image" id="cloud2">
-    <img src="CSS - My Site Images/mountain.png" alt="mountain Image" id="mountain">
+    <img src="cloud.png" alt="Cloud Image" id="cloud2">
+    <img src="mountain.png" alt="mountain Image" id="mountain">
     </div>
     <div id="middle-container">
 
